ManyToMany relationship for Page Template.   Removed extra field from BLC Locale.   Updated web flows for pages and structured content.